Fix Gradle daemon JVM options
Remove the `MaxPermSize` option from the Gradle configuration, as it is no longer supported in newer Java versions, causing the daemon to fail.